<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">CSGF</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_title">CSGF 2013</string>
    <string name="agendaText">Agenda</string>
    <string name="travelText">Travel Info</string>
    <string name="speakersText">Speakers</string>
    <string name="hotelText">Hotel Info</string>
    <string name="galleryText">Gallery</string>
    <string name="thanksText">Thank you!</string>
    <string name="welcomeText">Welcome</string>

    <string-array name="drawer_list">
        <item>Welcome</item>
        <item>Agenda</item>
        <item>Speakers</item>
        <item>Travel Info</item>
        <item>Hotel Info</item>
        <item>Gallery</item>
        <item>Thank you!</item>
    </string-array>

    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="action_websearch">Web search</string>
    <string name="app_not_available">Sorry, there\'s no web browser available</string>

</resources>